--- a/team20/package.json
+++ b/team20/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "express": "^4.18.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "serverless-mysql": "^1.5.4",
     "typescript": "4.9.5"
   }
 }
