--- a/team20/package.json
+++ b/team20/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
+    "mysql2": "^3.1.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
