--- a/team20/package.json
+++ b/team20/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^5.1.10",
+    "@aws-amplify/core": "^5.0.16",
+    "@aws-amplify/ui-react": "^4.3.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
@@ -16,13 +19,14 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "aws-amplify": "^5.0.15",
+    "aws-amplify": "^5.0.16",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
     "mysql2": "^3.1.2",
     "next": "13.1.6",
+    "pem": "^1.14.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "serverless-mysql": "^1.5.4",
