--- a/team20/package.json
+++ b/team20/package.json
@@ -17,8 +17,6 @@
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
     "aws-amplify": "^5.0.16",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
@@ -27,9 +25,13 @@
     "mysql2": "^3.1.2",
     "next": "13.1.6",
     "pem": "^1.14.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "serverless-mysql": "^1.5.4",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11"
   }
 }
